# obs-async-audio-filter

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: clang-format.yml  main.yml
ci/: ci_includes.sh.in  forum-update-info.json
ci/linux/: install-dependencies-ubuntu.sh  package-ubuntu.sh
ci/windows/: package-windows.cmd  package-windows.sh
cmake/: ObsPluginHelpers.cmake
data/locale/: en-US.ini
installer/: installer-Windows.iss.in  installer-macOS-post.sh.in  installer-macOS.pkgproj.in
model/: Makefile  analyze-ac-unity.awk  analyze-ac.plt  analyze-ac.sp  analyze-tran-ramp.sp  analyze-tran-step.sp  analyze-tran.plt  model.sp  params.sp
packaging/debian/: changelog  control  copyright  rules
packaging/fedora/: obs-studio-plugin-async-audio-filter.spec
src/: async-audio-filter.c  lag_lead_filter.h  plugin-macros.h.in  plugin-main.c  resampler-erikd.c  resampler-ffmpeg.c  resampler.c  resampler.h  swresampler-wrapper.h
test-onsdriver/: test_plugin_load.py
